--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,8 +142,12 @@ body {
     @apply border-border outline-ring/50;
   }
 
+  html {
+    @apply overflow-x-hidden;
+  }
+
   body {
-    @apply bg-background text-foreground overflow-x-hidden;
+    @apply bg-background text-foreground overflow-x-hidden w-full relative;
   }
 }
 
