--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-
+@plugin "tailwindcss-animate";
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
@@ -10,6 +10,7 @@
   --font-manrope: var(--font-manrope);
   --font-inter: var(--font-inter);
   --font-space-grotesk: var(--font-space-grotesk);
+  --font-newsreader: var(--font-newsreader);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -42,6 +43,21 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+
+  --animate-float: float 6s ease-in-out infinite;
+  --animate-spin-slow: spin 3s linear infinite;
+
+  @keyframes float {
+
+    0%,
+    100% {
+      transform: translateY(0);
+    }
+
+    50% {
+      transform: translateY(-10px);
+    }
+  }
 }
 
 html {
@@ -128,12 +144,10 @@ body {
     @apply border-border outline-ring/50;
   }
 
-  html {
-    @apply overflow-x-hidden;
-  }
+  html {}
 
   body {
-    @apply bg-background text-foreground overflow-x-hidden w-full relative;
+    @apply bg-background text-foreground w-full relative;
   }
 }
 
